--- a/css/style.css
+++ b/css/style.css
@@ -109,11 +109,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-default .navbar-brand {
-  color: #000;
+  color: #777;
   font-size: 34px;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 2px;
+  display: flex;
   
 }
 
@@ -124,7 +125,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-default .navbar-nav>li>a {
-  color: #808080;
+  color: #777;
   padding: 2px 20px;
   font-size: 15px;
   text-transform: uppercase;
@@ -343,7 +344,7 @@ h3.txt-tl {
 }
 
 #contact {
-  background-color: #f8f8f8;
+  background-color: #fff;
 }
 
 .validation {
